// Extracted from: Spotify 1.2.52.442 (windows)

syntax = "proto2";

package spotify.player.proto.transfer;

import "context_player_options.proto";
import "playback.proto";
import "play_history.proto";
import "session.proto";
import "queue.proto";

option optimize_for = CODE_SIZE;

message TransferState {
    optional ContextPlayerOptions options = 1;
    optional Playback playback = 2;
    optional Session current_session = 3;
    optional Queue queue = 4;
    optional PlayHistory play_history = 5;
}
